# uid_wrapper

./: .gitignore  AUTHORS  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  ChangeLog  ConfigureChecks.cmake  DefineOptions.cmake  README  README.install  TODO  config.h.cmake  uid_wrapper-config.cmake.in  uid_wrapper.pc.cmake
cmake/Modules/: DefinePlatformDefaults.cmake
doc/: CMakeLists.txt  README  uid_wrapper.1  uid_wrapper.1.txt
src/: CMakeLists.txt  uid_wrapper.c
tests/: CMakeLists.txt  getuids.c  test_glibc_thread_support.c  test_linux_caps.c  test_uwrap_disabled.c  test_uwrap_enabled.c  testsuite.c  uwrap_enabled.c  valgrind.supp
